--- a/client/loadtest.properties
+++ b/client/loadtest.properties
@@ -1,8 +1,25 @@
-# To change this license header, choose License Headers in Project Properties.
-# To change this template file, choose Tools | Templates
-# and open the template in the editor.
-maxThreads=50
-keySpace=100000
-testName=WearableWorkloadDefault
-numRequestsPerIteration=1000
+# Parameters implemented so far.
+#
+# maximum number of threads to run in client in peak phase
+maxThreads=128
 
+# maximum key that client slected from 0..keySpace
+keySpace=100000
+
+# load test client class - this is default, don't change unless we create a new one!
+testClassName=WearableWorkloadDefault
+
+# how many requests each thread generates per test interval. eg 10 for quick tests, 50-100 to see real trfiic, 500 is a long test
+numRequestsPerIteration=50
+
+# root of results file names that are genrated
+testName=WearableWorkloadDefault-node-wo-smallTest
+
+# URL of server implementation
+baseURL=https://nodeserver-neu-wo.appspot.com/
+
+# day number for client to use to generate data. Doesn't really need changing for single day tests
+dayNumber=1
+
+# to be implemented soon!!!
+#outputFileLocation=
