added propoerty file element
enabled output file location configuration through property file

--- a/client/loadtest.properties
+++ b/client/loadtest.properties
@@ -1,6 +1,6 @@
 # Parameters implemented so far.
 #
-# maximum number of threads to run in client in peak phase
+# maximum number of threads to run in client in peak phase (max 1024 tested to)
 maxThreads=128
 
 # maximum key that client slected from 0..keySpace
@@ -21,5 +21,6 @@ baseURL=https://nodeserver-neu-wo.appspot.com/
 # day number for client to use to generate data. Doesn't really need changing for single day tests
 dayNumber=1
 
-# to be implemented soon!!!
-#outputFileLocation=
+# absolute directory path to write outputs to. 
+# Current working directoty is default if not specified
+outputFileLocation=C:\\Users\\Public
